--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My Second Github Repo</title>
 </head>
 <body>
-    
+    <p>chakri kobe pabo </p>
+    <p> onk kichu korte hbe</p>
 </body>
 </html>
