--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Second Github Repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <p>chakri kobe pabo </p>
     <p> onk kichu korte hbe</p>
+    <h1> stylish banaisi</h1>
 </body>
 </html>
