--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <p>chakri kobe pabo </p>
     <p> onk kichu korte hbe</p>
     <h1> stylish banaisi</h1>
+    <img src="ami.jpg" alt="">
+    <img src="sinthiacox.jpg" alt="">
 </body>
 </html>
